# kbd_layout_overlay

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  LICENSE  MVP_CHANGELOG.md  README.md  carbon_test  carbon_test.m  create_default.py  embed_keymap.cmake  implementation_plan.md  test_mvp.c
.github/: copilot-instructions.md
.github/workflows/: build.yml  ci.yml  macos.yml  performance.yml  windows.yml
assets/: README.md
legacy/: Cargo.toml
legacy/src/: autostart.rs  config.rs  gui.rs  main.rs  overlay.rs  tray.rs
macos/: Entitlements.plist  HotkeyManager.h  HotkeyManager.m  ImageManager.h  ImageManager.m  Info.plist.in  MenuController.h  MenuController.m  README.md  WindowManager.h  WindowManager.m  build_macos.sh  keymap_data.h  platform_mac.c  system_mac.h  system_mac.m  window_mac.h  window_mac.m
macos/KbdLayoutOverlay/: AppDelegate.h  AppDelegate.m  OverlayView.h  OverlayView.m  OverlayWindow.h  OverlayWindow.m  hotkey_parse.c  hotkey_parse.h  main.m
macos/LaunchAgents/: com.example.kbdlayoutoverlay.plist
scripts/: benchmark_overlay.ps1  benchmark_overlay.sh
shared/: Makefile  app_context.c  app_context.h  config.c  config.h  error.c  error.h  event_system.h  file_system.h  graphics.h  hotkey.c  hotkey.h  log.c  log.h  monitor.c  monitor.h  overlay.c  overlay.h  platform.h  system.h  system_info.h  threading.h  timer.h  window.h
src/: autostart.rs  config.rs  gui.rs  main.rs  overlay.rs  tray.rs
tests/: test_config.c  test_overlay.c  test_overlay_copy.c  test_overlay_scale.c
windows/: HotkeyManager.c  HotkeyManager.h  ImageManager.c  ImageManager.h  MenuController.c  MenuController.h  README.md  WindowManager.c  WindowManager.h  build_windows.bat  hotkey_win.c  hotkey_win32.c  hotkey_win32.h  main.c  menu_win32.c  menu_win32.h  platform_win.c  prefs_win32.c  prefs_win32.h  resource.h  resource.rc  system_win.c  system_win.h  window_win.c  window_win.h
