[package]
name = "kbd_layout_overlay"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
winreg = "0.11"

[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
winit = { version = "0.28", features = ["serde"] }
softbuffer = "0.3"
image = "0.24"
rdev = "0.5"
