[package]
name = "kbd_layout_overlay"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.10"
image = "0.24"
eframe = { version = "0.24", default-features = false, features = ["glow"] }
tray-icon = { version = "0.9", optional = true }

[target.'cfg(windows)'.dependencies]
winreg = "0.11"
windows-sys = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
] }

[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
winit = { version = "0.28", features = ["serde"] }
softbuffer = "0.3"
display-info = "0.5"
active-win-pos-rs = "0.9"
mouse_position = "0.1"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"
core-foundation = "0.9"

[features]
default = []
tray = ["tray-icon"]
